--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -1,30 +1,44 @@
 ::-moz-selection {
   background: yellow;
 }
+
 ::selection {
   background: yellow;
 }
+
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
+
 html {
   font-size: 14px;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
 }
+
 html,
 body {
   margin: 0;
   line-height: 1.4285em;
   color: rgba(0, 0, 0, 0.87);
 }
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    "Helvetica Neue",
+    sans-serif;
 }
+
 h1,
 h2,
 h3,
@@ -35,6 +49,7 @@ h5 {
   font-weight: bold;
   padding: 0;
 }
+
 h1:last-child,
 h2:last-child,
 h3:last-child,
@@ -42,74 +57,92 @@ h4:last-child,
 h5:last-child {
   margin-bottom: 0;
 }
+
 h1,
 h2,
 h3 {
   text-transform: uppercase;
 }
+
 h1 {
   font-weight: 900;
   font-size: 1.5rem;
   margin-bottom: 0;
 }
+
 h2 {
   font-weight: 900;
   font-size: 3rem;
   letter-spacing: 0.25em;
 }
+
 h2 + p {
   font-weight: 300;
   font-size: 1.5rem;
   margin-bottom: 0.25em;
 }
+
 h3 {
   font-weight: 700;
   font-size: 1.25rem;
   letter-spacing: 0.15em;
 }
+
 h4 {
   font-size: 1.125rem;
 }
+
 h5 {
   font-size: 1rem;
 }
+
 h6 {
   font-size: 0.75rem;
   letter-spacing: 0.15em;
   text-transform: uppercase;
   margin: 0 0 1em 0;
 }
+
 section {
   padding: 1em 0;
 }
+
 p {
   margin: 0 0 1em;
   line-height: 1.4285em;
 }
+
 p:first-child {
   margin-top: 0;
 }
+
 p:last-child {
   margin-bottom: 0;
 }
+
 strong {
   font-weight: 600;
 }
+
 small {
   font-size: 80%;
 }
+
 ul,
 ol {
   list-style: none outside none;
   padding-left: 1.5em;
   margin: 0;
 }
+
 ol {
   counter-reset: ol-counter;
 }
+
 li {
   list-style: none outside none;
 }
+
 ul > li:before {
   content: "●";
   font-family: "Arial";
@@ -118,6 +151,7 @@ ul > li:before {
   margin-left: -1.5em;
   text-align: center;
 }
+
 ol > li:before {
   content: counter(ol-counter);
   counter-increment: ol-counter;
@@ -136,16 +170,19 @@ ol > li:before {
   height: 1rem;
   margin-top: calc((1.4285rem - 1rem) / 2);
 }
+
 ol.inverted > li:before {
   background: black;
   color: white;
   font-weight: normal;
 }
+
 a {
   color: blue;
   background-color: transparent;
   text-decoration: none;
 }
+
 a[rel="external"]:not(.label):hover,
 a.language:hover span {
   text-decoration: underline;
@@ -159,9 +196,11 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 sup {
   top: -0.5em;
 }
@@ -191,14 +230,14 @@ button {
   text-transform: none;
 }
 
-/* Correct the inability to style clickable types in iOS and Safari	*/
+/* Correct the inability to style clickable types in iOS and Safari */
 button,
 [type="button"] {
   -webkit-appearance: button;
   appearance: button;
 }
 
-/* Remove the inner border and padding in Firefox	*/
+/* Remove the inner border and padding in Firefox */
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner {
   border-style: none;
@@ -228,6 +267,7 @@ article {
   margin-left: auto;
   margin-right: auto;
 }
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   article {
     width: 723px;
@@ -235,6 +275,7 @@ article {
     margin-bottom: calc((100% - 723px) / 2);
   }
 }
+
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   article {
     width: 933px;
@@ -242,6 +283,7 @@ article {
     margin-bottom: calc((100% - 933px) / 2);
   }
 }
+
 @media only screen and (min-width: 1200px) {
   article {
     width: 1127px;
@@ -258,9 +300,11 @@ article {
   box-shadow: 0 10px 100px 0 rgba(34, 36, 38, 0.1);
   transition: box-shadow 0.2s linear;
 }
+
 .page[style^="border-color"] {
   padding: 4.5em;
 }
+
 .page[style^="border-color"]:before {
   content: " ";
   display: block;
@@ -275,16 +319,19 @@ article {
   pointer-events: none;
   transition: border-color 0.2s ease-in-out;
 }
+
 @media only screen {
   .page:hover {
     box-shadow: 0 10px 100px 0 rgba(34, 36, 38, 0.3);
   }
 }
+
 @media only screen and (max-width: 767px) {
   .page,
   .page[style^="border-color"] {
     padding: 0;
   }
+
   .page[style^="border-color"]:before {
     display: none;
   }
@@ -304,12 +351,14 @@ article {
   flex-wrap: wrap;
   align-items: stretch;
   padding: 0;
+
   /**
    * Temporary hack to be sure avatar
    * is rendered on print preview
    */
   display: block !important;
 }
+
 .grid .grid {
   margin-left: -1em;
   margin-right: -1em;
@@ -324,13 +373,15 @@ article {
   justify-content: inherit;
   align-items: stretch;
   width: 100% !important;
-  padding: 0rem;
+  padding: 0;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
 
 /* Columns */
+
 /* Standard 16 column */
+
 .grid > .column:not(.row),
 .grid > .row > .column {
   position: relative;
@@ -340,17 +391,20 @@ article {
   padding-right: 1rem;
   vertical-align: top;
 }
+
 .grid > * {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
 /* Columns */
+
 /* Vertical padding when no rows */
 .grid > .column:not(.row) {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+
 .grid > .row > .column {
   margin-top: 0;
   margin-bottom: 0;
@@ -369,90 +423,105 @@ article {
 .column.grid > [class*="one wide"].column {
   width: 6.25% !important;
 }
+
 .grid > .row > [class*="two wide"].column,
 .grid > .column.row > [class*="two wide"].column,
 .grid > [class*="two wide"].column,
 .column.grid > [class*="two wide"].column {
   width: 12.5% !important;
 }
+
 .grid > .row > [class*="three wide"].column,
 .grid > .column.row > [class*="three wide"].column,
 .grid > [class*="three wide"].column,
 .column.grid > [class*="three wide"].column {
   width: 18.75% !important;
 }
+
 .grid > .row > [class*="four wide"].column,
 .grid > .column.row > [class*="four wide"].column,
 .grid > [class*="four wide"].column,
 .column.grid > [class*="four wide"].column {
   width: 25% !important;
 }
+
 .grid > .row > [class*="five wide"].column,
 .grid > .column.row > [class*="five wide"].column,
 .grid > [class*="five wide"].column,
 .column.grid > [class*="five wide"].column {
   width: 31.25% !important;
 }
+
 .grid > .row > [class*="six wide"].column,
 .grid > .column.row > [class*="six wide"].column,
 .grid > [class*="six wide"].column,
 .column.grid > [class*="six wide"].column {
   width: 37.5% !important;
 }
+
 .grid > .row > [class*="seven wide"].column,
 .grid > .column.row > [class*="seven wide"].column,
 .grid > [class*="seven wide"].column,
 .column.grid > [class*="seven wide"].column {
   width: 43.75% !important;
 }
+
 .grid > .row > [class*="eight wide"].column,
 .grid > .column.row > [class*="eight wide"].column,
 .grid > [class*="eight wide"].column,
 .column.grid > [class*="eight wide"].column {
   width: 50% !important;
 }
+
 .grid > .row > [class*="nine wide"].column,
 .grid > .column.row > [class*="nine wide"].column,
 .grid > [class*="nine wide"].column,
 .column.grid > [class*="nine wide"].column {
   width: 56.25% !important;
 }
+
 .grid > .row > [class*="ten wide"].column,
 .grid > .column.row > [class*="ten wide"].column,
 .grid > [class*="ten wide"].column,
 .column.grid > [class*="ten wide"].column {
   width: 62.5% !important;
 }
+
 .grid > .row > [class*="eleven wide"].column,
 .grid > .column.row > [class*="eleven wide"].column,
 .grid > [class*="eleven wide"].column,
 .column.grid > [class*="eleven wide"].column {
   width: 68.75% !important;
 }
+
 .grid > .row > [class*="twelve wide"].column,
 .grid > .column.row > [class*="twelve wide"].column,
 .grid > [class*="twelve wide"].column,
 .column.grid > [class*="twelve wide"].column {
   width: 75% !important;
 }
+
 .grid > .row > [class*="thirteen wide"].column,
 .grid > .column.row > [class*="thirteen wide"].column,
 .grid > [class*="thirteen wide"].column,
 .column.grid > [class*="thirteen wide"].column {
   width: 81.25% !important;
 }
+
 .grid > .row > [class*="fourteen wide"].column,
 .grid > .column.row > [class*="fourteen wide"].column,
 .grid > [class*="fourteen wide"].column,
 .column.grid > [class*="fourteen wide"].column {
   width: 87.5% !important;
 }
+
 .grid > .row > [class*="fifteen wide"].column,
 .grid > .column.row > [class*="fifteen wide"].column,
 .grid > [class*="fifteen wide"].column,
 .column.grid > [class*="fifteen wide"].column {
   width: 93.75% !important;
 }
+
 .grid > .row > [class*="sixteen wide"].column,
 .grid > .column.row > [class*="sixteen wide"].column,
 .grid > [class*="sixteen wide"].column,
@@ -490,6 +559,7 @@ article {
 .grid > .row > [class*="mobile only"].column {
   display: none;
 }
+
 @media only screen and (max-width: 767px) {
   [class*="mobile only"].grid,
   .grid > [class*="mobile only"].row,
@@ -506,12 +576,14 @@ article {
   align-items: center;
   justify-content: center;
 }
+
 .avatar {
   position: relative;
   max-width: 15rem;
   display: block;
   flex: 1 0 auto;
 }
+
 @media only screen and (max-width: 1199px) {
   .avatar-wrapper {
     padding: 0;
@@ -522,6 +594,7 @@ article {
 .divider {
   border-top: 1px solid rgba(222, 222, 222, 1);
 }
+
 .divider.fat {
   border-top: 0.3571428571428571em solid rgba(10, 10, 10, 1);
   width: 33%;
@@ -549,10 +622,12 @@ article {
   transition: background 0.1s ease;
   -webkit-transition: background 0.1s ease;
 }
+
 .labels > .label:hover {
   background-color: #e0e0e0;
   color: rgba(0, 0, 0, 0.8);
 }
+
 .labels > .label:not(:last-child) {
   margin-right: 0.5em;
 }
@@ -574,41 +649,53 @@ article {
   font-size: 0.9em;
   font-weight: 400;
 }
+
 .contacts li {
   margin-bottom: 0.25rem;
   margin-right: 1em;
 }
+
 .contacts li:before {
   display: none;
 }
+
 .contacts li a {
   color: black;
   transition: color 0.2s ease-in-out;
 }
+
 .contacts li a.facebook:hover {
   color: #3b5998;
 }
+
 .contacts li a.github:hover {
   color: dimgrey;
 }
+
 .contacts li a.mail:hover {
   color: dimgrey;
 }
+
 .contacts li a.skype:hover {
   color: #00aff0;
 }
+
 .contacts li a.linkedin:hover {
   color: #0077b5;
 }
+
 .contacts li a.telegram:hover {
-  color: #0088cc;
+  color: #08c;
 }
+
 .contacts li a.phone:hover {
   color: dimgrey;
 }
+
 .contacts li a.website {
   display: none;
 }
+
 .contacts li a .icon {
   fill: currentColor;
   height: 1.1428rem;
@@ -623,10 +710,10 @@ a.twitter:hover {
 a.instagram:hover {
   background: linear-gradient(#e66465, #9198e5);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; 
+  -webkit-text-fill-color: transparent;
 }
 
-a.instagram:hover svg.icon{
+a.instagram:hover svg.icon {
   fill: url(#rg);
 }
 
@@ -636,10 +723,12 @@ a.instagram:hover svg.icon{
   .contacts {
     text-align: center;
   }
+
   .contacts li {
     margin-right: 0;
   }
 }
+
 @media only screen and (max-width: 1199px) {
   .contacts {
     margin-top: 1em;
@@ -651,17 +740,21 @@ a.instagram:hover svg.icon{
 details {
   display: block;
 }
+
 details > summary::-webkit-details-marker {
   margin-left: 0.25em;
   margin-right: 0.25em;
 }
+
 details > summary {
   display: list-item;
   cursor: pointer;
 }
+
 details > div {
   margin-top: 0.5em;
 }
+
 details > div:after {
   content: " ";
   clear: both;
@@ -687,6 +780,7 @@ details > div:after {
   vertical-align: top;
   outline: none;
 }
+
 .details > input:after {
   content: " ";
   border-top: 0.35em solid transparent;
@@ -697,21 +791,27 @@ details > div:after {
   height: 0.7em;
   cursor: pointer;
 }
+
 .details > input:checked {
   transform: rotate(90deg);
 }
+
 .details > label.summary {
   cursor: pointer;
 }
+
 .details > input:checked ~ div {
   display: block;
 }
+
 .details > div {
   display: none;
 }
+
 .details > div.labels {
   margin-top: 0.5em;
 }
+
 .details > div:after {
   content: " ";
   clear: both;
@@ -722,11 +822,13 @@ details > div:after {
 div.details > input:first-child {
   float: left;
 }
+
 div.details > input:first-child + label {
   width: calc(100% - 1.5em);
   padding: 0;
   display: inline-block;
 }
+
 div.details > input:first-child + label + .details-body {
   padding-left: 1.5em;
 }
@@ -735,9 +837,11 @@ div.details > input:first-child + label + .details-body {
 li.details {
   list-style-type: none;
 }
+
 li.details:before {
   display: none;
 }
+
 li.details > input {
   float: left;
   margin-left: -1.5em;
@@ -757,9 +861,11 @@ li.bordered {
   padding: 0.5em;
   transition: all 0.2s linear;
 }
+
 li.bordered:hover {
   background: #fafafa;
 }
+
 li.bordered > ul > li.details > div,
 li.bordered > ul > details > div {
   padding: 0.5em 0.5em 0 2em;
@@ -775,15 +881,19 @@ li.bordered > ul > details > div {
   padding: 0;
   margin: 0;
 }
+
 .timeline:not(:last-child) {
   margin-bottom: 1em;
 }
+
 .timeline > li:before {
   display: none;
 }
+
 .timeline > li:not(:last-child) {
   margin-bottom: 1em;
 }
+
 .timeline > li p {
   margin: 0;
 }
@@ -792,6 +902,7 @@ li.bordered > ul > details > div {
 .tags.small {
   font-size: 0.88em;
 }
+
 .tags.bulleted .tag:not(:last-child):after {
   content: "●";
   display: inline-block;
@@ -808,18 +919,23 @@ li.bordered > ul > details > div {
     box-shadow: none;
     border-color: transparent !important;
   }
+
   .grid {
     display: block;
   }
+
   .avatar-wrapper {
     padding: 0;
   }
+
   .contacts {
     margin-top: 1em;
   }
+
   .contacts li a.website {
     display: block;
   }
+
   .credits {
     display: none;
   }
@@ -836,6 +952,7 @@ li.bordered > ul > details > div {
   margin: 0;
   padding: 0;
 }
+
 .color:before {
   content: " ";
   display: inline-block;
@@ -846,9 +963,11 @@ li.bordered > ul > details > div {
   vertical-align: top;
   position: relative;
 }
+
 .color.midnightblue:before {
   background-color: midnightblue;
 }
+
 .color.chartreuse:before {
   background-color: chartreuse;
 }
@@ -862,6 +981,7 @@ button.audio {
   margin: 0;
   padding: 0;
 }
+
 button.audio svg {
   height: 16px;
   width: 16px;
@@ -877,9 +997,11 @@ button.audio svg {
   margin-left: -0.25em;
   display: inline-block;
 }
+
 #resume:hover {
   opacity: 1;
 }
+
 #resume .dots {
   background: #808080;
   color: white;
@@ -891,6 +1013,7 @@ button.audio svg {
   float: left;
   margin-right: 0.2857142857em;
 }
+
 #resume .dots .dot {
   float: left;
   height: 0.42857142857em;
@@ -900,6 +1023,7 @@ button.audio svg {
   margin-top: 0.2857142857em;
   vertical-align: top;
 }
+
 #resume .dots .dot:not(:last-child) {
   margin-right: 0.2142857em;
 }
@@ -918,6 +1042,7 @@ dialog {
   left: 0;
   background: white;
 }
+
 dialog .photos {
   height: 100%;
   width: 100%;
@@ -925,18 +1050,22 @@ dialog .photos {
   display: inline-flex;
   -webkit-overflow-scrolling: touch;
 }
+
 dialog .photos img {
   display: block;
   width: auto;
   height: 100%;
   padding: 4px 0 4px 4px;
 }
+
 dialog .photos img:last-child {
   padding-right: 4px;
 }
+
 dialog:target {
   display: block;
 }
+
 dialog:target ~ * {
   display: none;
 }
@@ -953,6 +1082,7 @@ dialog:target ~ * {
   height: 4em;
   overflow: hidden;
 }
+
 .close:before,
 .close:after {
   content: " ";
@@ -964,9 +1094,11 @@ dialog:target ~ * {
   background: white;
   height: 1px;
 }
+
 .close:before {
   transform: rotate(45deg);
 }
+
 .close:after {
   transform: rotate(-45deg);
 }
@@ -979,9 +1111,11 @@ dialog:target ~ * {
   opacity: 0.75;
   transition: opacity 0.2s linear;
 }
+
 .credits:hover {
   opacity: 1;
 }
+
 @media only screen and (max-width: 767px) {
   .credits {
     display: none;
@@ -998,18 +1132,22 @@ header {
   height: 2em;
   width: 100%;
 }
+
 header + main {
   margin-top: 2em;
 }
+
 main {
   overflow: auto;
   z-index: 2;
   background: white;
   position: relative;
 }
+
 main:nth-last-child(3) {
   margin-bottom: 50vh;
 }
+
 footer {
   height: 50vh;
   position: fixed;
@@ -1022,32 +1160,43 @@ footer {
   justify-content: center;
   z-index: 1;
 }
+
 @media only screen and (max-width: 767px) {
   header {
     height: auto;
     position: relative;
   }
+
   header + main {
     margin-top: 0;
   }
+
   main:nth-last-child(3) {
     margin-bottom: 0;
   }
+
   footer {
     height: auto;
     position: relative;
     padding: 1em;
   }
 }
+
 @media print {
   header,
   footer {
     display: none;
   }
+
   header + main {
     margin-top: 0;
   }
+
   main:nth-last-child(3) {
     margin-bottom: 0;
+  }
+
+  ::-moz-selection {
+    background: yellow;
   }
 }
